--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,65 @@
 asgiref==3.8.1
+attrs==25.3.0
+CacheControl==0.14.3
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cloudinary==1.44.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==45.0.2
 Django==5.2.3
+django-cors-headers==4.7.0
+django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
+drf-spectacular==0.28.0
+fcm-django==2.2.1
+firebase-admin==6.8.0
+google-api-core==2.25.0rc1
+google-api-python-client==2.170.0
+google-auth==2.40.2
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
+httplib2==0.22.0
+idna==3.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+Markdown==3.8
+MarkupSafe==3.0.2
+msgpack==1.1.0
+openapi-codec==1.3.2
+pillow==11.2.1
 pip==25.0.1
+proto-plus==1.26.1
+protobuf==5.29.4
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 PyJWT==2.9.0
+pyparsing==3.2.3
+python-dotenv==1.1.0
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.25.1
+rsa==4.9.1
+simplejson==3.20.1
+six==1.17.0
 sqlparse==0.5.3
+swapper==1.4.0
 tzdata==2025.2
+uritemplate==4.1.1
+urllib3==2.4.0
